# grants-stack-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEV.md  Dockerfile  README.md  docker-compose.yml  fly.toml  install.sh
.github/workflows/: build-rust.yml
conf.d/: server.conf
migrations/2023-02-20-223105_init/: down.sql  up.sql
migrations/2023-03-14-134411_incremental_upgrades/: down.sql  up.sql
src/: database.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  seed.rs  utils.rs
