[package]
name = "grants-stack-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
gql_client = "1.0.7"
serde ={version = "1.0.152", features = ["derive"]}
tokio = {version = "1.25.0", features = ["full"]}
diesel = { version = "2.0.3", features = ["postgres"] }
async-recursion = "1.0.2"
actix-web = "4.3.0"
serde_json = "1.0.93"


